Add topic variables

--- a/src/pages/javaScriptMethodsPage/ui/JavaScriptMethodsPage.module.css
+++ b/src/pages/javaScriptMethodsPage/ui/JavaScriptMethodsPage.module.css
@@ -59,6 +59,16 @@
   gap: 8px;
 }
 
+.noResult {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
+  color: grey;
+}
+
 .sentinel {
   height: 1px;
 }
