--- a/src/pages/javaScriptMethodsPage/ui/methodCard/errors/ErorsList.module.css
+++ b/src/pages/javaScriptMethodsPage/ui/methodCard/errors/ErorsList.module.css
@@ -10,7 +10,7 @@
 .header {
   padding-bottom: 8px;
   border-bottom: 1px dashed #ffcccc;
-  font-size: 0.9rem;
+  font-size: 13px;
   font-weight: 600;
   color: #d63939;
   text-transform: uppercase;
