--- a/src/pages/javaScriptTopicPage/ui/sectionItem/SectionItem.module.css
+++ b/src/pages/javaScriptTopicPage/ui/sectionItem/SectionItem.module.css
@@ -1,5 +1,7 @@
 .section {
-  margin: 0;
+  border: 1px solid #d3d3d3;
+  padding: 10px;
+  border-radius: 8px;
 }
 
 .header {
@@ -13,8 +15,7 @@
   font-size: 20px;
   font-weight: 500;
   color: #333;
-  margin-bottom: 20px;
-  margin-top: 0;
+  margin: 0;
 }
 
 .content {
